style.scss
// 첫 header부분.
@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css");
$inflearn-color: #00c471;
body {
  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
    "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
    sans-serif;
  // height: 1500px;
}

header {
  height: 40px;
  //   width: 100vw;
  display: flex;
  padding-left: 192px;
  border-bottom: 1px solid #f1f3f5;
  line-height: 1.43;
  max-width: 100vw;
  .first-header {
    display: flex;
    svg {
      margin-right: 4px;
    }
    li {
      display: flex;
    }
    .first-icon {
      color: #1b1c1d;
      font-size: 14px;
      font-weight: 700;
      text-decoration: none;
      display: flex;
    }
    .second-icon {
      color: #1b1c1d;
      font-size: 14px;
      font-weight: 500;
      text-decoration: none;
      display: flex;
    }
    li:first-child:after {
      content: "";
      display: block;
      margin: 0 8px;
      margin-top: 4px;
      width: 1px;
      height: 12px;
      background: #d5dbe2;
    }
  }
  section {
    height: 40px;
    width: 100%;
    display: flex;
    align-items: center;
  }
  section:nth-child(1) {
    // padding: 0 24px;
    justify-content: left;
  }
  section:nth-child(2) {
    // padding: 0 24px;
    justify-content: right;
    padding-right: 208px;
    a {
      text-decoration: none;
      font-size: 14px;
      font-weight: 500;
      color: #3e4042;
    }
  }
}
//nav바 부분
nav {
  height: 64px;
  background-color: #fff;
  // margin: 0 160px;
  padding-left: 192px;
  padding-right: 200px;
  display: flex;
  justify-content: space-between;
  position: sticky;
  top: 0;
  z-index: 1000;
  max-width: 100vw;
  .left-container {
    display: flex;
    height: 100%;
    // align-items: center;
    .brand-logo {
      display: flex;
      align-items: center;
      margin-right: 10px;
    }
    ul,
    li {
      list-style: none;
    }
    a {
      text-decoration: none;
      color: inherit;
    }
    .menu-wrap {
      padding: 16px 0;
      a {
        display: block;
        padding: 8px 16px;
      }
      .menu {
        font-size: 0;
        > li:first-child {
          max-width: 60px;
        }
        > li:nth-child(2) {
          max-width: 74px;
        }
        > li:nth-child(3) {
          max-width: 74px;
        }
        > li:nth-child(4) {
          max-width: 88px;
        }
        > li:nth-child(5) {
          max-width: 74px;
        }
        > li {
          display: inline-block;
          // text-align: center;
          font-size: 16px;
          vertical-align: top;
          position: relative;
          z-index: 9;
        }
        > li:hover > .menu2 {
          display: block;
        }
      }
      .menu2 {
        display: none;
        border-radius: 0;
        transform: translateY(0);
        box-shadow: 8px 5px 8px 1px rgb(0 10 18 / 10%),
          0 0 0 1px rgb(0 10 18 / 10%);
        background-color: #fff;
      }
      .lecture {
        width: 180px;
        height: 410px;
      }
      .community {
        width: 112px;
      }
      .inflearn {
        width: 128px;
      }
    }
  }
  .right-container {
    display: flex;
    align-items: center;
    justify-content: right;
    .login {
      padding: 8px;
      max-width: 164px;
      width: auto;
      flex-shrink: 1;
      box-sizing: border-box;
      input {
        max-width: 100%;
        width: 100%;
        height: 36px;
        padding: 5px 9px;
        background-color: #f6f6f6;
        border-radius: 3px;
        box-shadow: none;
        border: 1px solid transparent;
        box-sizing: border-box;
      }
      .search-icon {
        position: relative;
        i {
          position: absolute;
          right: 10px;
          top: 5px;
          color: gray;
        }
      }
    }
    .buttons {
      padding: 8px 0 8px 10px;
      a {
        text-decoration: none;
        padding: 8px;
        border: 1px solid #dbdbdb;
        border-radius: 4px;
        height: auto;
        line-height: 1;
        box-sizing: border-box;
      }
      a:first-child {
        margin-right: 8px;
        color: #363636;
      }
      a:nth-child(2) {
        background-color: #ff7867;
        color: #fff;
      }
    }
  }
}
/* ... */

